# UniProton

./: .gitignore  CMakeLists.txt  README.en.md  README.md  bin_helper.py  build.py  config.xml
demos/ascend310b/: CMakeLists.txt  readme.txt
demos/ascend310b/apps/: readme.txt  shm_readme.md
demos/ascend310b/bsp/: CMakeLists.txt  cache_asm.S  emmc.c  emmc.h  file_transfer.c  hwi_init.c  i2c_1911.h  i2c_1911_transfer.c  its_list.h  mmu.c  pl011.c  print.c  print_openamp.c  prt_gic_its.h  shm_pub.c  shm_pub.h  spi_1911.h  spi_1911_transfer.c  start.S  timer.c
demos/ascend310b/config/: CMakeLists.txt  prt_config.c  prt_config.h  prt_config_internal.h
demos/atlasa1/: CMakeLists.txt
demos/atlasa1/bsp/: CMakeLists.txt
demos/atlasa1/config/: prt_config.c  prt_config_internal.h
demos/ds_d1s/: CMakeLists.txt
demos/ds_d1s/apps/: CMakeLists.txt
demos/ds_d1s/bsp/: platform.h
demos/ds_d1s/config/: prt_config.c  prt_config.h
demos/helloworld/: CMakeLists.txt  readme.txt
demos/helloworld/apps/: CMakeLists.txt  readme.txt
demos/helloworld/bsp/: CMakeLists.txt  rtt_viewer.c  rtt_viewer.h  semihosting_dbg.c
demos/helloworld/config/: prt_buildef.h  prt_config.c  prt_config.h
demos/hi3093/: CMakeLists.txt  readme.txt
demos/hi3093/bsp/: CMakeLists.txt  cache_asm.S  hwi_init.c  mmu.c  mmu.h  print.c  print_openamp.c  timer.c
demos/hi3093/component/: UniProton-patch-for-boost_1_54_0.patch  libstdc++-uniproton.patch
demos/hi3093/config/: prt_config.c  prt_config.h
demos/hi3093/drivers/: readme.txt
demos/m4/: CMakeLists.txt
demos/m4/apps/: CMakeLists.txt
demos/m4/bsp/: rtt_viewer.h
demos/m4/config/: prt_config.c  prt_config.h  prt_config_internal.h
demos/milkv-duo/: CMakeLists.txt  README.md
demos/milkv-duo/apps/: CMakeLists.txt
demos/milkv-duo/bsp/: CMakeLists.txt  arch_sleep.c  cache.c  cvi_spinlock.c  hal_uart_dw.c  rtos_cmdqu.c  start.S  trap_handler.c  uart.c
demos/milkv-duo/component/: UniProton-libmetal.patch  UniProton-openamp.patch
demos/milkv-duo/config/: prt_config.c  prt_config.h  prt_config_internal.h
demos/raspi4/: CMakeLists.txt  readme.txt
demos/raspi4/bsp/: CMakeLists.txt  hwi_init.c  mmu.c  mmu.h  print.c
demos/raspi4/component/: UniProton-patch-for-libmetal.patch  UniProton-patch-for-openamp.patch
demos/raspi4/config/: prt_buildef.h  prt_config.c  prt_config_internal.h
demos/rk3588/: CMakeLists.txt  readme.txt
demos/rk3588/apps/: CMakeLists.txt
demos/rk3588/bsp/: CMakeLists.txt  gdbstub_cfg.c  mmu.c  mmu_table.h  print.c  print.h  timer.c
demos/rk3588/config/: prt_config.h
demos/sd3403/: CMakeLists.txt
demos/sd3403/bsp/: mmu.c
demos/sd3403/config/: prt_config.c
demos/uvp/: CMakeLists.txt
demos/uvp/ap_boot/: boot.S
demos/uvp/apps/: CMakeLists.txt
demos/uvp/bsp/: CMakeLists.txt  cpu_offline.c  gdbstub_cfg.c  print.c  print.h
demos/uvp/component/: UniProton-patch-for-openamp.patch
demos/uvp/config/: prt_config.c  prt_config_internal.h
demos/uvpck/: CMakeLists.txt
demos/uvpck/apps/: CMakeLists.txt
demos/uvpck/bsp/: CMakeLists.txt  cpu_offline.c  (+4 more)
demos/x86_64/: CMakeLists.txt  readme.txt
platform/: CMakeLists.txt  README.md
src/: CMakeLists.txt  Kconfig
src/arch/: CMakeLists.txt  Kconfig
src/component/: UniProton-patch-for-ccl.patch  UniProton-patch-for-libxml2.patch
src/config/: prt_config.c  prt_config_internal.h
src/core/: CMakeLists.txt  Kconfig
src/driver/: CMakeLists.txt
src/drivers/: CMakeLists.txt
src/extended/: CMakeLists.txt  Kconfig
src/fs/: CMakeLists.txt  Kconfig  fs.c  fs_initialize.c  include.txt
src/kal/: CMakeLists.txt
src/libc/: CMakeLists.txt
src/mem/: CMakeLists.txt  Kconfig  prt_mem.c  prt_mem_internal.h
src/net/: .gitignore  0000-adapter-fix-for-lwip.patch  CMakeLists.txt  Kconfig  UniProton-patch-for-igh.patch  UniProton-patch-for-lwip.patch  UniProton-patch-for-soem.patch
src/om/: CMakeLists.txt  Kconfig
src/osal/: CMakeLists.txt
src/security/: CMakeLists.txt  Kconfig
src/shell/: CMakeLists.txt
src/utility/: CMakeLists.txt  Kconfig
testsuites/: CMakeLists.txt  readme.txt
testsuites/bsp/: CMakeLists.txt  rtt_viewer.c  semihosting_dbg.h
testsuites/cmsis/: CMakeLists.txt
testsuites/config/: CMakeLists.txt  prt_config.c  prt_config.h  prt_config_internal.h
testsuites/cxx-test/: CMakeLists.txt  run_test.cc
testsuites/cyclictest/: CMakeLists.txt  cyclictest.c
testsuites/drivers/: CMakeLists.txt
testsuites/eigen-test/: CMakeLists.txt  eigen_test.cc
testsuites/filesystem-test/: CMakeLists.txt  filesystem_test.c  filesystem_test.h
testsuites/forteTest/: CMakeLists.txt  forte_Init.c
testsuites/iot-ota-test/: CMakeLists.txt  README.md  host_iot_ota_server.py  iot_ota_test.c  iot_ota_test.h
testsuites/jitter-test/: CMakeLists.txt  interrupt_jitter.c
testsuites/kern-test/: CMakeLists.txt  interrupt_test.c  kern_test_public.c  kern_test_public.h  mmu_test.c  sched_rr_test.c  sem_mutex_test.c
testsuites/libc-test/: CMakeLists.txt
testsuites/libxml2-test/: CMakeLists.txt  xmltest.c
testsuites/linux-test/: CMakeLists.txt  kthreadTest.c  schedTest.c  waitTest.c
testsuites/log-test/: CMakeLists.txt  log_test.c
testsuites/lowpower-test/: CMakeLists.txt  lowpower_test.c  lowpower_test.h
testsuites/lwipTest/: CMakeLists.txt  lwip_dbg.c  lwip_udp.c  net.h  proxy_udp.c
testsuites/mbedtls-test/: CMakeLists.txt  host_dtls_client.py  mbedtls_dtls_server_test.c  mbedtls_dtls_server_test.h
testsuites/modbusTest/: CMakeLists.txt  modbus_unit_test_client.c
testsuites/opcuaTest/: CMakeLists.txt  opcua_client.c  opcua_server.c
testsuites/posixtestsuite/: CMakeLists.txt
testsuites/rhealstone/: CMakeLists.txt
testsuites/shell-test/: CMakeLists.txt
testsuites/soemTest/: CMakeLists.txt  soem_demo.c
testsuites/support/: CMakeLists.txt  change_main.py  main.c
testsuites/trace-test/: CMakeLists.txt  trace_test.c  trace_test_public.h
testsuites/urosTest/: CMakeLists.txt  addTwoInt_server.c  helloworld_pub.c  helloworld_sub.c  turtlesim_action.c  walk_maze.c
testsuites/zlib-test/: CMakeLists.txt  zlib_test.c  zlib_test.h
(+4897 files in other folders)
